# nQuad

./: .gitignore  API_COMPREHENSIVE.md  API_INTROSPECTION.md  Cargo.toml  DEVELOPMENT_PLAN.md  DOCUMENTATION_PHASE.md  EMSCRIPTEN_SETUP.md  IMPLEMENTATION_REPORT.txt  LINEBOY_WASM_QUICK_START.md  NEXT_STEPS.md  PHASE_10_COMPLETION.md  PHASE_11_COMPLETION.md  PHASE_12_6_COMPLETION.md  PHASE_13_COMPLETION.md  PHASE_7_TASK_1_REPORT.md  PHASE_7_TASK_2_REPORT.md  PHASE_7_TASK_3_COMPLETION.md  PHASE_7_TASK_3_SUMMARY.txt  PHASE_7_TASK_4_REPORT.md  PHASE_7_TASK_4_SUMMARY.txt  PHASE_8_COMPLETION.md  PHASE_8_SUMMARY.txt  PYXEL_COMPAT_API.md  PYXEL_FORK_MANAGEMENT.md  README.md  ROUNDTRIP_TEST_VERIFICATION.md  TASK_3_SUMMARY.md  TASK_4_VALIDATION_REPORT.md  TEXT_PARTICLE_IMPLEMENTATION.md  TEXT_PARTICLE_SPEC.md  TOUCH_INPUT_SPEC.md  WASM_BUILD_COMPLETE.md  WASM_BUILD_GUIDE.md  WASM_DEBUG_GUIDE.md  WASM_SETUP_COMPLETE.md  WEB_MOBILE_CONTROLLER.md  test_caching.rs  test_caching_performance.rs  test_format_conversion.rs  test_phase7.rs  (+1 more)
.github/: copilot-instructions.md
docs/: API_REFERENCE.md  API_USAGE_EXAMPLES.md  DISCORD_TOOLS.md  GETTING_STARTED.md  README.md
examples/: basic_sprite.rs  cubeboy.rs  editor.rs  indexed_palette.rs  lineboy.rs  mario64_p13.rs  mariokart.rs  pyxel_demo.rs  save_load_sprite.rs
games/mario64/: Cargo.toml
games/mario64/src/: lib.rs
games/mario64/wasm-output/: mario64.js
scripts/: api_lookup.sh  api_reference_post.sh  build-wasm.sh  ci.sh  discord_manager.sh  discord_notify.sh  progress_report.sh  serve-wasm.py  setup-emscripten.sh  update-pyxel-fork.sh
src/: lib.rs  nquad_api.rs
tests/: audio_system.rs  editor_compatibility.rs  error_handling.rs  integration_editor_engine.rs  lineboy_cubeboy_integration.rs  macroquad_integration.rs  wasm_integration.rs
web/: README.md  all_demos.html  cubeboy_game.html  cubeboy_test_minimal.html  index.html  lineboy_512x512.html  multi_games.html  (+5 more)
(+101 files in other folders)
