[package]
name = "mario64"
version = "0.1.0"
edition = "2021"

[dependencies]
nantaraquad = { path = "../../" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }

[lib]
crate-type = ["cdylib"]
